err/django-appskel.err
Listing '.'...
Listing './bin'...
Compiling './bin/django-appskel.py'...
***   File "./bin/django-appskel.py", line 56
    print "Skeleton at: %s" % skeldir
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/django_appskel-1.0a0.egg-info'...
Listing './lib/python3.5/site-packages/djangoappskel'...
Listing './lib/python3.5/site-packages/djangoappskel/bin'...
Compiling './lib/python3.5/site-packages/djangoappskel/bin/django-appskel.py'...
***   File "./lib/python3.5/site-packages/djangoappskel/bin/django-appskel.py", line 56
    print "Skeleton at: %s" % skeldir
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djangoappskel/skel'...
Listing './lib/python3.5/site-packages/djangoappskel/skel/.tx'...
Listing './lib/python3.5/site-packages/djangoappskel/skel/__module__'...
Compiling './lib/python3.5/site-packages/djangoappskel/skel/__module__/admin.py'...
***   File "./lib/python3.5/site-packages/djangoappskel/skel/__module__/admin.py", line 3
    from {{ module }}.models import *
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangoappskel/skel/__module__/locale'...
Listing './lib/python3.5/site-packages/djangoappskel/skel/__module__/locale/en'...
Listing './lib/python3.5/site-packages/djangoappskel/skel/__module__/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/djangoappskel/skel/__module__/test'...
Listing './lib/python3.5/site-packages/djangoappskel/skel/__module__/test/testapp'...
Listing './lib/python3.5/site-packages/djangoappskel/skel/__module__/test/testapp/templates'...
Listing './lib/python3.5/site-packages/djangoappskel/skel/__module__/test/testapp/templates/__module__'...
Listing './lib/python3.5/site-packages/djangoappskel/skel/docs'...
Compiling './lib/python3.5/site-packages/djangoappskel/skel/docs/conf.py'...
***   File "./lib/python3.5/site-packages/djangoappskel/skel/docs/conf.py", line 63
    import {{ module }}
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangoappskel/skel/setup.py'...
***   File "./lib/python3.5/site-packages/djangoappskel/skel/setup.py", line 3
    import {{ module }}
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
